# openglfor3d

./: CMakeLists.txt  README.md
include/glad/: glad.h
res/shaders/: vertex_shader.glsl
src/: glad.c  main.cpp
